# MnL_MCP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmarks.yml
api_schema/lean/: lean.exec.schema.json
api_schema/loogle/: loogle.search.schema.json
api_schema/sympy/: sympy.explore.schema.json
api_schema/z3/: z3.solve.schema.json
assets/icon/: convert_instructions.md
benchmarks/profiles/: lean_run.prof  lean_run.txt  sympy_factor.prof  sympy_factor.txt  sympy_simplify.prof  sympy_simplify.txt  sympy_solve.prof  sympy_solve.txt  z3_solve.prof  z3_solve.txt
cython/: mcp_lean.py  mcp_lean.pyx  mcp_loogle.pyx  mcp_sympy.c  mcp_sympy.py  mcp_sympy.pyx  mcp_z3.c  mcp_z3.py  mcp_z3.pyx  setup.py
cython/tests/: conftest.py  test_mcp_lean.py  test_mcp_loogle.py  test_mcp_sympy.py  test_mcp_z3.py
docs/: ARCHITECTURE.md  CI.md  CLAUDE_CODE.md  CONTRIBUTING.md  DESIGN.md  DEVELOPER_GUIDE.md  EXAMPLES.md  PROFILING.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  TESTS.md
docs/API/: README.md
docs/API_TYPES/: index.ts  lean.exec.ts  loogle.search.ts  sympy.explore.ts  z3.solve.ts
installer/: README.md  build_installer.ps1  installer.nsi
installer/Launcher/: Launcher.csproj  Program.cs
scripts/: check_sympy_bindings.py  gen_api_types_index.js  generate_ts_from_schemas.js  run_profiling.py  scaffold_project.py  show_python_paths.py  test_wrappers.py  verify_mcp_z3_import.py
src/: CMakeLists.txt  lean_persistent.cpp  lean_runner.cpp  mcp_stdio_server.cpp  pyembed.cpp  server.rc  sympy_bindings.cpp  z3_bindings.cpp  z3_capi.cpp
tests/benchmarks/: test_performance.py
